// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`#render different card accents should render component as expected (1) 1`] = `
<gux-card>
  <template shadowrootmode="open">
    <div class="gux-card gux-bordered">
      <slot>
      </slot>
    </div>
  </template>
  <span>
    This is a content slot
  </span>
</gux-card>
`;

exports[`#render different card accents should render component as expected (2) 1`] = `
<gux-card accent="bordered">
  <template shadowrootmode="open">
    <div class="gux-card gux-bordered">
      <slot>
      </slot>
    </div>
  </template>
  <span>
    This is a content slot
  </span>
</gux-card>
`;

exports[`#render different card accents should render component as expected (3) 1`] = `
<gux-card accent="raised">
  <template shadowrootmode="open">
    <div class="gux-card gux-raised">
      <slot>
      </slot>
    </div>
  </template>
  <span>
    This is a content slot
  </span>
</gux-card>
`;

exports[`#render different card accents should render component as expected (4) 1`] = `
<gux-card accent="borderless">
  <template shadowrootmode="open">
    <div class="gux-card gux-borderless">
      <slot>
      </slot>
    </div>
  </template>
  <span>
    This is a content slot
  </span>
</gux-card>
`;
